--- a/consent_onboarding_script.qmd
+++ b/consent_onboarding_script.qmd
@@ -25,9 +25,6 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 ## Consent and Onboarding Script
 
-<center>(This is the script for the consent/onboarding call)</center>
-
-
 *Italics are script you read to the participant*\
 **\[Items in brackets are instructions to you\]**
 
@@ -143,21 +140,21 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 *Next we'll go over study risks and benefits. There are no major risks related to participation in this study. If you decide to participate, the main risk is that someone might see your information who should not.*
 
-*For this reason, we are very careful and have created safeguards regarding how your data is stored and accessed. Protecting your data and privacy is our top priority, and we are overseen by a group at the University of Wisconsin-Madison that exists to protect and help research subjects. With their guidance, we follow careful protocols for storing, using, and sharing any information that could be used to find out who participants are.*
+*For this reason, we are VERY careful and have created safeguards regarding how your data is stored and accessed. Protecting your data and privacy is our top priority, and we are overseen by a group at the University of Wisconsin-Madison that exists to protect and help research subjects. With their guidance, we follow careful protocols for storing, using, and sharing any information that could be used to find out who participants are.*
 
-*Some examples of how we will protect your information and reduce the risk that someone might see it:*
+*Here are some examples of how we will protect your information and reduce the risk that someone might see it:*
 
--   *We store your contact information like your name and address in a locked location that is separate from the study data.*\
--   *We label study data with an anonymous study id number.*\
--   *When we share results and data with other researchers, we will not share information that could be used to find out who participants are, like their location data.*\
--   *We will only ever give group summaries of demographic information like people's age, gender, and race or ethnicity.*
+-   *We store your contact information like your name and address in a locked location that is separate from the study data.*  
+-   *We label study data with an anonymous study id number.*  
+-   *When we share results and data with other researchers, we will not share information that could be used to find out who participants are, like their location data.*  
+-   *We will only ever give group summaries of demographic information, like people's age, gender, and race or ethnicity.*  
 
 *There are no direct benefits of taking part in this study. The STAR app that participants use was designed to help people in recovery and might help you, but we are not treatment providers, and this study is not a treatment. Of course, our team does hope that in the future, what we learn in this study will be used to improve treatments for other people in recovery.*
 
 *We will compensate people who participate in the study for as long as they choose to do so. If you decide to enroll, you will earn:*\
-*+ \$20 for the first phone visit (that's this visit)\*
-*+ \$10 for a phone call in a week to check in about the study\*
-*+ \$10 for a phone call at the very end of the study*
+*+ \$20 for the first phone visit (that's this visit)*  
+*+ \$10 for a phone call in a week to check in about the study*  
+*+ \$10 for a phone call at the very end of the study*  
 
 *There will be only 3 calls total over the entire 12-month course of the study. This call counts as one of those three calls. To be clear, we will NOT be calling or checking-in on you regularly aside from the surveys you complete in-app.*
 
@@ -177,17 +174,25 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 *Then, finally, you'll download the app and set up an account.*
 
-*Now is the time to open that link that I texted you. You should see a document that says "Consent Form" at the top. You can take as much time as you like to read it over and let me know when you are done. I can sit quietly here in case you have any questions. You'll also be able to download a copy of the consent form if you would like to continue now and read over the full document later or save a copy for your records. Alternatively, if you would like to take some time to think about things, I would also be happy to schedule a follow-up call with you later. So would you like to read it now, continue, or get back to us?*\
-**\[When done\]**\
+*Now is the time to open that link that I texted you. You should see a document that says "Consent Form" at the top. You can take as much time as you like to read it over and let me know when you are done. I will sit quietly here in case you have any questions.* 
+
+*You'll also be able to download a copy of the consent form if you would like to continue now and read over the full document later, or save a copy for your records.* 
+
+*Alternatively, if you would like to take some time to think about things, I would also be happy to schedule a follow-up call with you later.*
+
+*So would you like to read it now, continue right away, or read it later and get back to us?*
+
+**\[If they read it right away, wait till they are done\]**\
 *Do you have any questions or anything you want me to know?*
 
-**\[Answer their questions or move on if not\]**\
+**\[Answer their questions or move on if not\]**
+
 *You now have three options. You can decide to participate, decide not to participate, or you can take more time to make this decision.*
 
 *If I have answered your questions, and you feel you understand the information in the consent form please tap "Continue" and then select "Yes, I am ready to say "yes" or "no" to participating in this study".*
 
 ::: {.callout-caution collapse="true"}
-## If not ready to consent/need more time to think about it
+## If not ready to review consent or need more time to think about it before consenting
 
 *That's understandable and I'm glad you're going to take more time. You should feel free to discuss the consent with anyone if you feel it will benefit you. It's very important for you to be fully informed and not feel pressured before you consent.*
 
@@ -205,14 +210,19 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 **\[Answer any remaining questions and complete the telephone visit. No payment given\]**
 :::
 
-**\[If yes\]**\
+**\[If ready to consent "Yes"\]**\
 *Okay, great. Please type your full legal name into the space provided. This will function as your electronic signature. Once you are done, please pause and let me know.*
 
 **\[Pause\]**
 
 *In the next form, you'll be asked to provide some contact information and information about your background. On the first page you'll provide your phone number, phone plan provider, and billing zip code. Then, you will be asked to provide an email you would like to use for the STAR app. Next, you'll be asked to provide a mailing address that we will use to send you the payment debit card, and a W-9 form.*
 
-*The W-9 form will come with instructions on how to complete it and a pre addressed envelope. We will not be able to send you your first monthly payment until it is returned, so it is crucial you get this back to us. You can either mail it back to us, or take a clear picture and send this to our hotline phone number, which we will provide after the call. If you choose to send an image, we can call over the phone to get your SSN.*
+
+::: {.callout-tip}
+## If they skip through the the consent form, PICK UP HERE
+:::
+
+*The W-9 form that we send you along with the payment card will come with instructions on how to complete it, and a pre addressed envelope for you to mail it back to us. We will not be able to send you your first monthly payment until it is returned, so it is crucial you get this back to us. You can either mail it back to us, or take a clear picture and send this to our hotline phone number, which we will provide after the call. If you choose to send an image, we can call over the phone to get your SSN.*
 
 *We will mostly communicate with you through the study app, but we occasionally use your email address to get in touch with you. Then the final screen page of questions will ask you to select when you started your medication assisted treatment, as well as your race/ethnicity and date of birth.*
 
@@ -222,13 +232,20 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 *Great! Please tap continue, and the download should start automatically. The app will guide you through set up. You should agree to the permissions the app or your phone asks of you as it is setting up.*
 
-**\[If the download does not start, you can send this link via text: <https://star.achess.wisc.edu/apps/android/latest.apk>\]**
+::: {.callout-caution collapse="true"}
+## If the download does not start
+
+*That's ok, sometimes participants have trouble loading the download. *\[Ask questions to determine what/where the issue is\]*
+
+**\[You can also send this link via text: <https://star.achess.wisc.edu/apps/android/latest.apk> \]**
+
+:::
 
 *When the app is downloaded, please let me know what you see on the screen*\
 
 **\[If participant does not see STAR homepage, troubleshoot\]**
 
-*That's ok, sometimes participants have trouble loading the download. *\[Ask questions to determine what/where the issue is\]*
+
 
 **\[If it worked, they should see STAR homepage ("Welcome to STAR", "Create your Account")\]**
 
@@ -237,6 +254,11 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 *Can you confirm that you see the STAR landing page/ text that reads "Create your account"?*
 
 **\[pause\]**
+
+
+::: {.callout-tip}
+## If they skip through the the app download, PICK UP HERE
+:::
 
 *Once you type in the site id (1202), you'll see a brief introduction. On the next page, you will see a form to Create an Account. This form asks for you to provide your First and Last name, your email and to create a unique screen name. You are going to want to pick a username that does not contain your name, as this is the name that others using the app will see when interacting with you on discussion boards or through direct messages. It can be a nickname or something random that comes to mind. You'll also need to create a password at least 8 characters long.*
 
@@ -253,24 +275,25 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
     *Allow STAR to make or manage phone calls*\
 -   *This permission will allow you to dial study staff from the app and dial contacts you add to the friends and family section of the app*\
     *Allow STAR to send and view SMS*\
--   *This permission will allow us to gather data on you text message logs. Like I said earlier we will never be able to the content of any pictures you send or receive, and we will remove any personal identifiers from your text logs while we do our data analysis*\
+-   *This permission will allow us to gather data on you text message logs. Like I said earlier we will never be able to the content of any pictures you send or receive, and we will remove any personal identifiers from your text logs while we do our data analysis*
 -   *Stop Optimizing Battery usage -- Please tap Allow*
 
 :::
 
-*Do you have any other questions about the access STAR will have to your device?*
+::: {.callout-tip}
+## If they skip through the creating an account, PICK UP HERE
+:::
 
-**\[Pause\]**
+*Do you have any other questions about the access STAR will have to your device?* **\[Pause and answer questions\]**
 
-*Today, the STAR app will ask you to complete the daily update. Please try to take the daily update after this call. Tomorrow and every day after, you will be asked to complete the daily update.*
+*Today, the STAR app will ask you to complete your first DAILY update. Please try to take the daily update soon after this call. You will be asked to complete another daily update every day of your participation.*
 
-*On the third day of your participation, and then once a month when you are on study, you'll be prompted to complete the monthly update.*
+*On the THIRD day of your participation, and then once a month when you are on study, you'll be prompted to complete the MONTHLY update.*
 
-*Any questions?*
+*Do you have any questions on that?*
 
-### App Guidelines Information
 
-*I want to take some time to tell you a bit about the STAR user guidelines. These guidelines were designed to make sure our participants and staff are protected and are treated professionally and with respect.*
+*Now I want to take some time to tell you a bit about the STAR user guidelines. These guidelines were designed to make sure our participants and staff are protected and are treated professionally and with respect.*
 
 *Briefly, our guidelines are...*
 
@@ -284,37 +307,32 @@ STAR Study Consent Form: https://uwmadison.co1.qualtrics.com/jfe/form/SV_6zzSu1d
 
 *All in-app messages, posts, and phone calls with staff are subject to review by the STAR team, and staff will remove any discussion post, comment, or individual member who does not follow these guidelines. You can find more information about the app guidelines and the review process for violating app guidelines in the Study Information tab in the STAR App.*
 
-### Final Steps
+
 
 *The final step of enrolling in the study will be to watch tutorial videos that describe the app's recovery resources and explain how to complete the different study tasks. You can find these video tutorials in a text message I will send to you shortly after we complete this phone call.*
 
-*Completing these video tutorials will take about 35 minutes \[3\] and you will be compensated \$20 for your time.*
-
-**(Training Video Link: <https://uwmadison.co1.qualtrics.com/jfe/form/SV_89fOXmASpmTIFEy>)**
+*Completing these video tutorials will take about 35 minutes for four videos and you will be compensated \$20 for your time.*
 
 *If you experience any issues either with the video tutorials or completing any of the study tasks, please do not hesitate to email or call us.*
 
-*We'll want to call you in one week to see how everything is going with your participation. This will be a very brief call, only about 5 minutes and you'll receive \$10 compensation for its completion.*
+*We'll want to call you in one week to see how everything is going with your participation. This will be a very brief call, only about 5 minutes, and you'll receive \$10 compensation for its completion.*
 
-*So, one week from now will put us at {insert date that is one-week from onboarding session}. Does that sound like it will work for you?*
+*So, one week from now will put us at {insert date/time that is one-week from onboarding session}. Does that sound like it will work for you?*
 
-*And would you like to keep the same time or select a new one?*
-
-**\[If no, pick another day either before or after 7 days\]**
-
-
+::: {.callout-caution collapse="true"}
+## If no, pick another day either just before or after 7 days
 
 *And would you like to keep the same time or select a new one?*
 
 **\[Allow participant to pick a time\]**
+:::
 
-*Great! The day before the one-week check-in, we'll send you a quick email to remind you of the call.*
+*Great! The day before the one-week check-in, we'll send you a quick text to remind you of the call.*
 
 *So that is all I have for you today. Do you have any final questions or concerns?* **\[Answer any questions\]**
 
-### Thank Participants and End Visit
 
-*Wonderful! Well I want to thank you for your cooperation and patience in completing today's consent and onboarding visit. It's because of the commitment of people like you that we are able to do what we do and hopefully help others, and we appreciate you signing on to participate in our study. As a quick reminder, I'm going to give you a call \[describe next session date/ time\]. Otherwise, I hope you have a wonderful day!*
+*Wonderful! Well I want to thank you for your cooperation and patience in completing today's consent and onboarding visit. It's because of the commitment of people like you that we are able to do what we do and hopefully help others, and we appreciate you signing on to participate in our study. As a quick reminder, I'm going to give you a call \[describe next session date/ time\] but you can message us if you have any questions before then. I hope you have a wonderful day!*
 
 *Thank you!*
 
